[workspace]
members = [
    "client",
    "coordinator",
    "endorser",
    "ledger",
    "store",
    "verifier",
    "bench",
    "endpoint",
    "endpoint_grpc",
    "endpoint_rest",
    "light_client_grpc",
    "light_client_rest",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
