[package]
name = "nimble"
version = "0.1.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = {version = "1", features = ["simd_backend", "serde"]}
sha3 = "0.9.1"
rand = "0.7"
digest = "0.9"