[package]
name = "nimble"
version = "0.1.0"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ed25519-dalek = {version = "1", features = ["simd_backend"]}
ed25519-dalek = "1"
sha3 = "0.9.1"
rand = "0.7"
digest = "0.9"
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }
hex = "0.4"
generic-array = "0.14"
clap = "2.33"
itertools = "0.10"

[build-dependencies]
tonic-build = "0.5"
prost-build = "0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the gRPC Coordinator server
name = "coordinator"
path = "src/coordinator.rs"

[[bin]] # Bin to run the gRPC Endorser server
name = "endorser"
path = "src/endorser.rs"

[[bin]] # Bin to run the gRPC Client
name = "client"
path = "src/client.rs"
