[package]
name = "bench"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verifier = { path = "../verifier" }
ledger = {path = "../ledger"}
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = "2.33"
rand = "0.7"

[build-dependencies]
tonic-build = "0.5"
prost-build = "0.8"