[package]
name = "bench"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <sudheesh@cs.washington.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verifier = { path = "../verifier" }
ledger = {path = "../ledger"}
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0.4", features = ["derive"] }
rand = "0.7"
colored = "2.0.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"

[build-dependencies]
tonic-build = "0.5"
prost-build = "0.8"