[package]
name = "coordinator"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger = { path = "../ledger" }
store = { path = "../store" }
tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }
clap = "2.34.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
verifier = { path = "../verifier" }
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.6.2"
prost-build = "0.9.0"

[features]
default = []
receipts = []