[package]
name = "coordinator"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger = { path = "../ledger" }
store = { path = "../store" }
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }
clap = "2.34.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.5.1"}
hyper = { version = "0.14.18", features = ["full"] }
tower = "0.4.12"
base64-url = "1.4.13"
serde_derive = { version = "1.0" }
serde_json = "1.0"
rand = "0.8.4"
clokwerk = "0.4.0"
time = "0.3.37"
log = "0.4.14"


[dev-dependencies]
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.8.2"
prost-build = "0.11.1"