[package]
name = "endorser"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger = { path = "../ledger" }
ed25519-dalek = "1.0.1"
tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
clap = "2.34.0"
rand = "0.7"  # ed25519-dalek <= 1.0.1 relies on rand 0.7
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.6.2"
prost-build = "0.9.0"
