[package]
name = "endpoint_grpc"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
clap = "2.34.0"
rand = "0.8.4"
endpoint = {path = "../endpoint"}

[build-dependencies]
tonic-build = "0.6.2"
prost-build = "0.9.0"
