[package]
name = "endpoint_rest"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.1"}
hyper = { version = "0.14.18", features = ["full"] }
tower = "0.4.12"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
clap = "2.34.0"
rand = "0.8.4"
endpoint = {path = "../endpoint"}
base64-url = "1.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
serde_json = "1.0"
