[package]
name = "helper"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
clap = "2.34.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
azure_core = "0.2" 
azure_data_tables = "0.2"
azure_storage_blobs = "0.2" 
azure_storage = "0.2"
bytes = "1.1"
md5 = "0.7.0"
http = "0.2.6"
bincode = "1.3.3"
