[package]
name = "ledger"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1"
sha2 = "0.9.8"
rand = "0.7"
digest = "0.9"
generic-array = "0.14"
itertools = "0.10"

[dev-dependencies]
hex = "0.4"
