[package]
name = "ledger"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
rand = "0.8.4"
digest = "0.10.1"
generic-array = "0.14.4"
itertools = "0.10.3"
openssl = { version = "0.10", features = ["vendored"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
bson = "*"
mongodb = "2.1.0"
async-trait = "*"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["full_ledger"]
full_ledger = []
