[package]
name = "store"
version = "0.1.0"
edition = "2018"
authors = ["Srinath Setty <srinath@microsoft.com>", "Sudheesh Singanamalla <t-sudheeshs@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger = {path = "../ledger"}
sha2 = "0.10.0"
rand = "0.8.4"
digest = "0.10.1"
generic-array = "0.14.4"
itertools = "0.10.3"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
bson = "*"
mongodb = "2.1.0"
async-trait = "*"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
hex = "0.4.3"
azure_core = "0.2"
azure_storage_blobs = "0.2" 
azure_data_tables = "0.2" 
azure_storage = "0.2" 
bytes = "1.1"
md5 = "0.7.0"
http = "0.2.6"
base64-url = "1.4.13"
fs2 = "0.4.3"
